# platform-syncer

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: rust.yml
app/: .gitignore  package-lock.json
app/src/: index.html  main.js  styles.css
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
server/: .gitignore  Cargo.toml  database.db  database_schema.txt
server/src/: database_interface.rs  main.rs  rest_api.rs  storage_interface.rs
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
