[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart = "0.6.1"
futures = "0.3.30"
futures-util = "0.3.30"
rusqlite = "0.31.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio = { version = "1.37.0", features = ["full"] }
actix-files = "0.6.6"
